# AutoStartup

./: README.md  pyproject.toml  requirements_api.txt  run_api.py
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/pages/: Index.tsx
outputs/: competitive_analysis.md  gap_analysis.md  github_repo_url.md  github_repository.md  idea_classification.md  mvp_architecture.md  orchestration_decision.md  scaffolding_plan.json
reports/: competitive_analysis.md
src/autostartup/: crew.py  main.py  models.py
src/autostartup/api/: main.py  models.py  task_manager.py
src/autostartup/config/: agents.yaml  tasks.yaml
src/autostartup/tools/: github_tools.py  orchestrator_tools.py
tests/: test_extract_scaffold.py
