[project]
name = "autostartup"
version = "0.1.0"
description = "AutoStartup using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
autostartup = "autostartup.main:run"
run_crew = "autostartup.main:run"
train = "autostartup.main:train"
replay = "autostartup.main:replay"
test = "autostartup.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
